# obs-imageflux

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/actions/build-plugin/: action.yml
.github/actions/package-plugin/: action.yml
.github/scripts/: .build.zsh  .package.zsh  Build-Windows.ps1
.github/scripts/utils.pwsh/: Setup-Host.ps1
.github/scripts/utils.zsh/: setup_macos
.github/workflows/: main.yml
cmake/: ObsPluginHelpers.cmake
cmake/bundle/macos/: Plugin-Info.plist.in  entitlements.plist  installer-macos.pkgproj.in
cmake/bundle/windows/: installer-Windows.iss.in  resource.rc.in
src/: client.cpp  client.h  encoder.c  output.cpp  plugin-main.c  service.cpp
